Front index.html done

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,148 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Inter', sans-serif;
+}
+
 body {
-    background-color: rgb(158, 196, 198);
-    color: aliceblue;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    
+    height: 100%;
+    background-color: #fff5f5;
+    color: #333;
+    box-sizing: border-box;
+}
+
+#header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 70px;
+    background-color: rgba(255, 105, 98, 0.4);
+    width: 100%;
+    z-index: 1000;
+
+
+}
+
+#brand {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    padding-left: 2%;
+    text-decoration: none;
+}
+
+#brand img {
+    width: 50px;
+    height: 50px;
+    object-fit: contain;
+}
+
+#brand h1 {
+    color: #ff4d4d;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+#navbar {
+    display: flex;
+    gap: 25px;
+    padding-right: 2%;
+}
+
+#navbar a {
+    text-decoration: none;
+    color: #ff4d4d;
+    font-weight: 600;
+}
+
+#navbar a:hover {
+    color: #ff1a1a;
+}
+
+
+#main {
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    padding-top: 20px;
+}
+
+.main-content {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+    width: 100%;
+    max-width: 1200px;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+
+.main-content h2 {
+    font-size: 48px;
+    color: #ff4d4d;
+    margin-bottom: 20px;
+}
+
+.main-content p {
+    font-size: 17px;
+    margin-bottom: 30px;
+    color: #666;
+}
+
+.main-content a {
+    display: inline-block;
+    padding: 12px 25px;
+    background-color: #ff4d4d;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    max-width: 40%;
+}
+
+.main-content a:hover {
+    background-color: #ff1a1a;
+}
+
+#main-text {
+    flex-basis: 600px;
+    flex-grow: 0;
+    max-height: 60%;
+}
+
+.main-content img {
+    width: 40%;
+    height: auto;
+    object-fit: contain;
+}
+
+
+@media (max-width: 768px) {
+    .main-content {
+        flex-direction: column;
+        
+    }
+    .main-content img {
+        width: 70%;
+    }
+
+    #main-text {
+        flex-basis: content;
+        text-align: center;
+        align-items: center;
+    }
+    .main-content a {
+        width: 100%;
+    }
+
+}
+
+@media (max-width: 480px) {
+    #header {
+        flex-direction: column;
+        height: auto;
+        gap: 10px;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
 }
