--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ body {
 
 #navbar a {
     text-decoration: none;
+    text-align: center;
     color: #ff4d4d;
     font-weight: 600;
 }
@@ -113,6 +114,49 @@ body {
     object-fit: contain;
 }
 
+#organizer {
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Two equal-width columns */
+    gap: 10px; /* Spacing between the iframes */
+    width: 100%;
+    height: 70vh;
+}
+
+#showcase-header {
+    text-align: center;
+    font-size: 48px;
+    color: #ff4d4d;
+    margin-bottom: 20px;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+}
+
+#panel {
+    display: flex;
+    justify-content: space-evenly;
+    height: 70vh;
+    width: 400%;
+    margin: 0%;
+}
+
+#embedded-page {
+    border: none;
+    height: 500%;
+    width: 100%;
+}
+
+iframe {
+    -moz-transform: scale(0.25, 0.25);
+    -webkit-transform: scale(0.25, 0.25);
+    -o-transform: scale(0.25, 0.25);
+    -ms-transform: scale(0.25, 0.25);
+    transform: scale(0.25, 0.25);
+    -moz-transform-origin: top left;
+    -webkit-transform-origin: top left;
+    -o-transform-origin: top left;
+    -ms-transform-origin: top left;
+    transform-origin: top left;
+}
 
 @media (max-width: 768px) {
     .main-content {
@@ -131,6 +175,10 @@ body {
 
     .main-content a {
         width: 100%;
+    }
+
+    #organizer {
+        display: grid;
     }
 }
 
