shifted showcase scaling

--- a/css/style.css
+++ b/css/style.css
@@ -116,10 +116,11 @@ body {
 
 #organizer {
     display: grid;
-    grid-template-columns: 1fr 1fr; /* Two equal-width columns */
-    gap: 10px; /* Spacing between the iframes */
+    grid-template-columns: 1fr 1fr; 
+    gap: 10px; 
     width: 100%;
     height: 70vh;
+    justify-content: space-evenly;
 }
 
 #showcase-header {
@@ -134,8 +135,8 @@ body {
 #panel {
     display: flex;
     justify-content: space-evenly;
-    height: 70vh;
-    width: 400%;
+    height: 1200px;
+    width: 150%;
     margin: 0%;
 }
 
@@ -143,14 +144,15 @@ body {
     border: none;
     height: 500%;
     width: 100%;
+    margin-left: 4vh;
 }
 
 iframe {
-    -moz-transform: scale(0.25, 0.25);
-    -webkit-transform: scale(0.25, 0.25);
-    -o-transform: scale(0.25, 0.25);
-    -ms-transform: scale(0.25, 0.25);
-    transform: scale(0.25, 0.25);
+    -moz-transform: scale(0.6, 0.6);
+    -webkit-transform: scale(0.6, 0.6);
+    -o-transform: scale(0.6, 0.6);
+    -ms-transform: scale(0.6, 0.6);
+    transform: scale(0.6, 0.6);
     -moz-transform-origin: top left;
     -webkit-transform-origin: top left;
     -o-transform-origin: top left;
@@ -178,7 +180,7 @@ iframe {
     }
 
     #organizer {
-        display: grid;
+        display:inline;
     }
 }
 
