--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,7 @@ iframe {
     margin-bottom: 5vh;
 }
 
+/**/
 #about-header {
     text-align: center;
     font-size: 48px;
@@ -273,15 +274,39 @@ iframe {
 /*
 About Page
 */
-#about-container{
-  display: flex;
 
+.about-pfp {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 1px solid #333;
+}
+
+
+#about-container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 90px;
+    padding: 20px;
 }
 
 .about-person {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
+    max-width: 250px;
+    gap: 10px;
 }
 
-.about-person img{
-    width: 100%;
+.about-person h1 {
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
+.about-person p {
+    margin: 0;
 }
