--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
     background-color: #fff5f5;
     color: #333;
     box-sizing: border-box;
+    min-height: 100vh;
 }
 
 #header {
@@ -339,4 +340,19 @@ About Page
 
 .about-person p {
     margin: 0;
+}
+
+#footer {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    position: fixed;
+    top: 98%;
+    bottom: 0px; 
+    text-align: center;
+    background-color: rgba(255, 105, 98, 0.4);
+    color: #ff4d4d;
+    padding: 0%;
+    vertical-align: bottom;
+    
 }
