--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ body {
 #navbar a {
     text-decoration: none;
     text-align: center;
+    text-wrap: wrap;
     color: #ff4d4d;
     font-weight: 600;
 }
