--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,11 @@ body {
     text-align: left;
 }
 
+.highlight-change {
+    color: #00aaff; /* bright blue */
+    font-weight: bold;
+}
+
 /*
 About Page
 */
